# FORECAST_APP

./: CMakeLists.txt  LICENSE  README.md  config.json  conio.h  main.cpp
lib/WeatherData/: WeatherData.h
lib/WeatherDisplay/: CMakeLists.txt  WeatherAssets.h  WeatherDisplay.cpp  WeatherDisplay.h
lib/WeatherParser/: CMakeLists.txt  WeatherParser.cpp  WeatherParser.h
